# vamba

./: .gitignore  Qwen  README.md  draw_figs.py  environment.yaml  github.sh  install.sh  pyproject.toml  rsync.sh  test.py
eval/: dump_summary.py  eval_houreval.py  eval_hourvideo.py  eval_longvideobench.py  eval_videomme.py  eval_videomme.sh  utils_hourvideo.py  utils_videomme.py
models/: conversation.py
models/vamba_mamba2/: configuration_qwen2_vl.py  image_processing_qwen2_vl.py  mamba2_block.py  mamba2_mixer.py  modeling_qwen2_vl_vamba.py  processing_qwen2_vl.py
scripts/: pretrain_vamba.sh  pretrain_vamba_mmp_nomamba_noalpha.sh  sft_vamba.sh  train_0.sh  train_1.sh
tools/: chat_utils.py  vamba_chat.py
train/: conversation.py  data.py  data_utils.py  train_utils.py  train_vamba.py
train/accelerate_configs/: accelerate_config_zero1.yaml  accelerate_config_zero2.yaml  accelerate_config_zero3.yaml
train/data_configs/: data_cc12m_pixelprose_packed.yaml  data_llava_ov_video_packed.yaml  llavaov_image.yaml
