[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vamba"
version = "0.1.0"
description = "Code for Vamba: Understanding Hour-Long Videos with Hybrid Mamba-Transformers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy==1.26.1",
  "torch==2.6.0+cu118",
  "torchvision==0.21.0+cu118",
  "av==11.0.0",
  "decord==0.6.0",
  "deepspeed==0.16.7",
  "bitsandbytes==0.45.3",
  "triton==3.2.0",
  "einops==0.6.1",
  "ftfy==6.1.3",
  "fvcore==0.1.5.post20221221",
  "imageio==2.33.1",
  "omegaconf==2.3.0",
  "opencv-python==4.8.1.78",
  "packaging==24.0",
  "pandas==2.2.1",
  "Pillow==10.1.0",
  "regex==2023.10.3",
  "requests==2.31.0",
  "scipy==1.12.0",
  "scikit-image",
  "submitit==1.5.1",
  "tensorboardX==2.6.2.2",
  "termcolor==2.4.0",
  "timm==0.4.12",
  "tqdm==4.66.1",
  "transformers==4.44.0",
  "wandb==0.16.2",
  "sentencepiece==0.2.0",
  "easydict==1.13",
  "pysubs2==1.7.3",
  "fire==0.6.0",
  "mambapy==1.2.0",
  "mamba-ssm==2.2.2",
  "causal-conv1d==1.4.0",
  "qwen_vl_utils==0.0.10",
  "setuptools==68.2.2",
  "wheel==0.42.0",
  "pytest==8.1.1"
]

[project.urls]
Homepage = "https://tiger-ai-lab.github.io/Vamba/"
"Bug Tracker" = "https://github.com/TIGER-AI-Lab/Vamba/issues"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*", "docs*", "scripts*"]